@@ -23,53 +23,52 @@ import com.fasterxml.jackson.annotation.JacksonInject;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
+import com.google.common.base.Predicate;
 import com.google.inject.Inject;
 import org.apache.druid.client.indexing.ClientCompactionIOConfig;
 import org.apache.druid.client.indexing.ClientCompactionIntervalSpec;
+import org.apache.druid.client.indexing.ClientCompactionRunnerInfo;
 import org.apache.druid.client.indexing.ClientCompactionTaskDimensionsSpec;
 import org.apache.druid.client.indexing.ClientCompactionTaskGranularitySpec;
 import org.apache.druid.client.indexing.ClientCompactionTaskQuery;
 import org.apache.druid.client.indexing.ClientCompactionTaskQueryTuningConfig;
 import org.apache.druid.client.indexing.ClientCompactionTaskTransformSpec;
+import org.apache.druid.client.indexing.ClientMSQContext;
 import org.apache.druid.client.indexing.ClientTaskQuery;
-import org.apache.druid.client.indexing.IndexingTotalWorkerCapacityInfo;
 import org.apache.druid.client.indexing.TaskPayloadResponse;
 import org.apache.druid.common.guava.FutureUtils;
 import org.apache.druid.common.utils.IdUtils;
+import org.apache.druid.indexer.CompactionEngine;
 import org.apache.druid.indexer.TaskStatusPlus;
 import org.apache.druid.indexer.partitions.DimensionRangePartitionsSpec;
 import org.apache.druid.java.util.common.ISE;
 import org.apache.druid.java.util.common.granularity.Granularity;
 import org.apache.druid.java.util.common.granularity.GranularityType;
-import org.apache.druid.java.util.common.io.Closer;
 import org.apache.druid.java.util.common.logger.Logger;
-import org.apache.druid.java.util.common.parsers.CloseableIterator;
+import org.apache.druid.metadata.LockFilterPolicy;
 import org.apache.druid.query.aggregation.AggregatorFactory;
-import org.apache.druid.rpc.HttpResponseException;
 import org.apache.druid.rpc.indexing.OverlordClient;
 import org.apache.druid.server.coordinator.AutoCompactionSnapshot;
-import org.apache.druid.server.coordinator.CompactionStatistics;
 import org.apache.druid.server.coordinator.CoordinatorCompactionConfig;
 import org.apache.druid.server.coordinator.DataSourceCompactionConfig;
-import org.apache.druid.server.coordinator.DruidCoordinatorConfig;
 import org.apache.druid.server.coordinator.DruidCoordinatorRuntimeParams;
+import org.apache.druid.server.coordinator.compact.CompactionSegmentIterator;
+import org.apache.druid.server.coordinator.compact.CompactionSegmentSearchPolicy;
+import org.apache.druid.server.coordinator.compact.SegmentsToCompact;
 import org.apache.druid.server.coordinator.stats.CoordinatorRunStats;
 import org.apache.druid.server.coordinator.stats.Dimension;
 import org.apache.druid.server.coordinator.stats.RowKey;
 import org.apache.druid.server.coordinator.stats.Stats;
 import org.apache.druid.timeline.DataSegment;
 import org.apache.druid.timeline.SegmentTimeline;
-import org.jboss.netty.handler.codec.http.HttpResponseStatus;
 import org.joda.time.Interval;
 
 import javax.annotation.Nullable;
-import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -87,8 +86,11 @@ public class CompactSegments implements CoordinatorCustomDuty
 
   private static final Logger LOG = new Logger(CompactSegments.class);
 
+  private static final String TASK_ID_PREFIX = "coordinator-issued";
+  private static final Predicate<TaskStatusPlus> IS_COMPACTION_TASK =
+      status -> null != status && COMPACTION_TASK_TYPE.equals(status.getType());
+
   private final CompactionSegmentSearchPolicy policy;
-  private final boolean skipLockedIntervals;
   private final OverlordClient overlordClient;
 
   // This variable is updated by the Coordinator thread executing duties and
@@ -98,23 +100,13 @@ public class CompactSegments implements CoordinatorCustomDuty
   @Inject
   @JsonCreator
   public CompactSegments(
-      @JacksonInject DruidCoordinatorConfig config,
       @JacksonInject CompactionSegmentSearchPolicy policy,
       @JacksonInject OverlordClient overlordClient
   )
   {
     this.policy = policy;
     this.overlordClient = overlordClient;
-    this.skipLockedIntervals = config.getCompactionSkipLockedIntervals();
     resetCompactionSnapshot();
-
-    LOG.info("Scheduling compaction with skipLockedIntervals [%s]", skipLockedIntervals);
-  }
-
-  @VisibleForTesting
-  public boolean isSkipLockedIntervals()
-  {
-    return skipLockedIntervals;
   }
 
   @VisibleForTesting
@@ -152,9 +144,10 @@ public class CompactSegments implements CoordinatorCustomDuty
 
     // Fetch currently running compaction tasks
     int busyCompactionTaskSlots = 0;
-    final CloseableIterator<TaskStatusPlus> activeTasks =
-        FutureUtils.getUnchecked(overlordClient.taskStatuses(null, null, 0), true);
-    final List<TaskStatusPlus> compactionTasks = filterNonCompactionTasks(activeTasks);
+    final List<TaskStatusPlus> compactionTasks = CoordinatorDutyUtils.getNumActiveTaskSlots(
+        overlordClient,
+        IS_COMPACTION_TASK
+    );
     for (TaskStatusPlus status : compactionTasks) {
       final TaskPayloadResponse response =
           FutureUtils.getUnchecked(overlordClient.taskPayload(status.getId()), true);
@@ -177,16 +170,23 @@ public class CompactSegments implements CoordinatorCustomDuty
       final Interval interval = compactionTaskQuery.getIoConfig().getInputSpec().getInterval();
       intervalsToSkipCompaction.computeIfAbsent(status.getDataSource(), k -> new ArrayList<>())
                                .add(interval);
-
-      busyCompactionTaskSlots += findMaxNumTaskSlotsUsedByOneCompactionTask(
-          compactionTaskQuery.getTuningConfig()
-      );
+      // Note: The default compactionRunnerType used here should match the default runner used in CompactionTask when
+      // no runner is provided there.
+      CompactionEngine compactionRunnerType = compactionTaskQuery.getCompactionRunner() == null
+                                              ? CompactionEngine.NATIVE
+                                              : compactionTaskQuery.getCompactionRunner().getType();
+      if (compactionRunnerType == CompactionEngine.NATIVE) {
+        busyCompactionTaskSlots +=
+            findMaxNumTaskSlotsUsedByOneNativeCompactionTask(compactionTaskQuery.getTuningConfig());
+      } else {
+        busyCompactionTaskSlots += findMaxNumTaskSlotsUsedByOneMsqCompactionTask(compactionTaskQuery.getContext());
+      }
     }
 
     // Skip all the intervals locked by higher priority tasks for each datasource
     // This must be done after the invalid compaction tasks are cancelled
     // in the loop above so that their intervals are not considered locked
-    getLockedIntervalsToSkip(compactionConfigList).forEach(
+    getLockedIntervals(compactionConfigList).forEach(
         (dataSource, intervals) ->
             intervalsToSkipCompaction
                 .computeIfAbsent(dataSource, ds -> new ArrayList<>())
@@ -196,7 +196,7 @@ public class CompactSegments implements CoordinatorCustomDuty
     // Get iterator over segments to compact and submit compaction tasks
     Map<String, SegmentTimeline> dataSources = params.getUsedSegmentsTimelinesPerDataSource();
     final CompactionSegmentIterator iterator =
-        policy.reset(compactionConfigs, dataSources, intervalsToSkipCompaction);
+        policy.createIterator(compactionConfigs, dataSources, intervalsToSkipCompaction);
 
     final int compactionTaskCapacity = getCompactionTaskCapacity(dynamicConfig);
     final int availableCompactionTaskSlots
@@ -207,14 +207,15 @@ public class CompactSegments implements CoordinatorCustomDuty
         compactionConfigs,
         currentRunAutoCompactionSnapshotBuilders,
         availableCompactionTaskSlots,
-        iterator
+        iterator,
+        dynamicConfig.getEngine()
     );
 
     final CoordinatorRunStats stats = params.getCoordinatorStats();
     stats.add(Stats.Compaction.MAX_SLOTS, compactionTaskCapacity);
     stats.add(Stats.Compaction.AVAILABLE_SLOTS, availableCompactionTaskSlots);
     stats.add(Stats.Compaction.SUBMITTED_TASKS, numSubmittedCompactionTasks);
-    addCompactionSnapshotStats(currentRunAutoCompactionSnapshotBuilders, iterator, stats);
+    updateCompactionSnapshotStats(currentRunAutoCompactionSnapshotBuilders, iterator, stats);
 
     return params;
   }
@@ -244,12 +245,12 @@ public class CompactSegments implements CoordinatorCustomDuty
     Granularity configuredSegmentGranularity = dataSourceCompactionConfig.getGranularitySpec()
                                                                          .getSegmentGranularity();
     Granularity taskSegmentGranularity = compactionTaskQuery.getGranularitySpec().getSegmentGranularity();
-    if (configuredSegmentGranularity.equals(taskSegmentGranularity)) {
+    if (configuredSegmentGranularity == null || configuredSegmentGranularity.equals(taskSegmentGranularity)) {
       return false;
     }
 
     LOG.info(
-        "Cancelling task [%s] as task segmentGranularity is [%s] but compaction config segmentGranularity is [%s]",
+        "Cancelling task[%s] as task segmentGranularity[%s] differs from compaction config segmentGranularity[%s].",
         compactionTaskQuery.getId(), taskSegmentGranularity, configuredSegmentGranularity
     );
     overlordClient.cancelTask(compactionTaskQuery.getId());
@@ -258,6 +259,7 @@ public class CompactSegments implements CoordinatorCustomDuty
 
   /**
    * Gets a List of Intervals locked by higher priority tasks for each datasource.
+   * However, when using a REPLACE lock for compaction, intervals locked with any APPEND lock will not be returned
    * Since compaction tasks submitted for these Intervals would have to wait anyway,
    * we skip these Intervals until the next compaction run.
    * <p>
@@ -265,30 +267,21 @@ public class CompactSegments implements CoordinatorCustomDuty
    * though they lock only a Segment and not the entire Interval. Thus,
    * a compaction task will not be submitted for an Interval if
    * <ul>
-   *   <li>either the whole Interval is locked by a higher priority Task</li>
+   *   <li>either the whole Interval is locked by a higher priority Task with an incompatible lock type</li>
    *   <li>or there is atleast one Segment in the Interval that is locked by a
    *   higher priority Task</li>
    * </ul>
    */
-  private Map<String, List<Interval>> getLockedIntervalsToSkip(
+  private Map<String, List<Interval>> getLockedIntervals(
       List<DataSourceCompactionConfig> compactionConfigs
   )
   {
-    if (!skipLockedIntervals) {
-      LOG.info("Not skipping any locked interval for Compaction");
-      return new HashMap<>();
-    }
-
-    final Map<String, Integer> minTaskPriority = compactionConfigs
+    final List<LockFilterPolicy> lockFilterPolicies = compactionConfigs
         .stream()
-        .collect(
-            Collectors.toMap(
-                DataSourceCompactionConfig::getDataSource,
-                DataSourceCompactionConfig::getTaskPriority
-            )
-        );
+        .map(config -> new LockFilterPolicy(config.getDataSource(), config.getTaskPriority(), config.getTaskContext()))
+        .collect(Collectors.toList());
     final Map<String, List<Interval>> datasourceToLockedIntervals =
-        new HashMap<>(FutureUtils.getUnchecked(overlordClient.findLockedIntervals(minTaskPriority), true));
+        new HashMap<>(FutureUtils.getUnchecked(overlordClient.findLockedIntervals(lockFilterPolicies), true));
     LOG.debug(
         "Skipping the following intervals for Compaction as they are currently locked: %s",
         datasourceToLockedIntervals
@@ -298,11 +291,13 @@ public class CompactSegments implements CoordinatorCustomDuty
   }
 
   /**
-   * Returns the maximum number of task slots used by one compaction task at any time when the task is issued with
-   * the given tuningConfig.
+   * Returns the maximum number of task slots used by one native compaction task at any time when the task is
+   * issued with the given tuningConfig.
    */
   @VisibleForTesting
-  static int findMaxNumTaskSlotsUsedByOneCompactionTask(@Nullable ClientCompactionTaskQueryTuningConfig tuningConfig)
+  static int findMaxNumTaskSlotsUsedByOneNativeCompactionTask(
+      @Nullable ClientCompactionTaskQueryTuningConfig tuningConfig
+  )
   {
     if (isParallelMode(tuningConfig)) {
       @Nullable
@@ -313,6 +308,18 @@ public class CompactSegments implements CoordinatorCustomDuty
       return 1;
     }
   }
+
+  /**
+   * Returns the maximum number of task slots used by one MSQ compaction task at any time when the task is
+   * issued with the given context.
+   */
+  static int findMaxNumTaskSlotsUsedByOneMsqCompactionTask(@Nullable Map<String, Object> context)
+  {
+    return context == null
+           ? ClientMSQContext.DEFAULT_MAX_NUM_TASKS
+           : (int) context.getOrDefault(ClientMSQContext.CTX_MAX_NUM_TASKS, ClientMSQContext.DEFAULT_MAX_NUM_TASKS);
+  }
+
 
   /**
    * Returns true if the compaction task can run in the parallel mode with the given tuningConfig.
@@ -336,62 +343,9 @@ public class CompactSegments implements CoordinatorCustomDuty
     return tuningConfig.getPartitionsSpec() instanceof DimensionRangePartitionsSpec;
   }
 
-  private static List<TaskStatusPlus> filterNonCompactionTasks(CloseableIterator<TaskStatusPlus> taskStatuses)
-  {
-    final List<TaskStatusPlus> retVal = new ArrayList<>();
-
-    try (final Closer closer = Closer.create()) {
-      closer.register(taskStatuses);
-      while (taskStatuses.hasNext()) {
-        final TaskStatusPlus status = taskStatuses.next();
-
-        // taskType can be null if middleManagers are running with an older version. Here, we consevatively regard
-        // the tasks of the unknown taskType as the compactionTask. This is because it's important to not run
-        // compactionTasks more than the configured limit at any time which might impact to the ingestion
-        // performance.
-        if (status.getType() == null || COMPACTION_TASK_TYPE.equals(status.getType())) {
-          retVal.add(status);
-        }
-      }
-    }
-    catch (IOException e) {
-      throw new RuntimeException(e);
-    }
-
-    return retVal;
-  }
-
   private int getCompactionTaskCapacity(CoordinatorCompactionConfig dynamicConfig)
   {
-    int totalWorkerCapacity;
-    try {
-      final IndexingTotalWorkerCapacityInfo workerCapacityInfo =
-          FutureUtils.get(overlordClient.getTotalWorkerCapacity(), true);
-
-      if (dynamicConfig.isUseAutoScaleSlots() && workerCapacityInfo.getMaximumCapacityWithAutoScale() > 0) {
-        totalWorkerCapacity = workerCapacityInfo.getMaximumCapacityWithAutoScale();
-      } else {
-        totalWorkerCapacity = workerCapacityInfo.getCurrentClusterCapacity();
-      }
-    }
-    catch (ExecutionException e) {
-      // Call to getTotalWorkerCapacity may fail during a rolling upgrade: API was added in 0.23.0.
-      if (e.getCause() instanceof HttpResponseException
-          && ((HttpResponseException) e.getCause()).getResponse().getStatus().equals(HttpResponseStatus.NOT_FOUND)) {
-        LOG.noStackTrace().warn(e, "Call to getTotalWorkerCapacity failed. Falling back to getWorkers.");
-        totalWorkerCapacity =
-            FutureUtils.getUnchecked(overlordClient.getWorkers(), true)
-                       .stream()
-                       .mapToInt(worker -> worker.getWorker().getCapacity())
-                       .sum();
-      } else {
-        throw new RuntimeException(e.getCause());
-      }
-    }
-    catch (InterruptedException e) {
-      Thread.currentThread().interrupt();
-      throw new RuntimeException(e);
-    }
+    int totalWorkerCapacity = CoordinatorDutyUtils.getTotalWorkerCapacity(overlordClient);
 
     return Math.min(
         (int) (totalWorkerCapacity * dynamicConfig.getCompactionTaskSlotRatio()),
@@ -425,7 +379,8 @@ public class CompactSegments implements CoordinatorCustomDuty
       Map<String, DataSourceCompactionConfig> compactionConfigs,
       Map<String, AutoCompactionSnapshot.Builder> currentRunAutoCompactionSnapshotBuilders,
       int numAvailableCompactionTaskSlots,
-      CompactionSegmentIterator iterator
+      CompactionSegmentIterator iterator,
+      CompactionEngine defaultEngine
   )
   {
     if (numAvailableCompactionTaskSlots <= 0) {
@@ -433,39 +388,30 @@ public class CompactSegments implements CoordinatorCustomDuty
     }
 
     int numSubmittedTasks = 0;
-    int numCompactionTasksAndSubtasks = 0;
+    int totalTaskSlotsAssigned = 0;
 
-    while (iterator.hasNext() && numCompactionTasksAndSubtasks < numAvailableCompactionTaskSlots) {
-      final List<DataSegment> segmentsToCompact = iterator.next();
-      if (segmentsToCompact.isEmpty()) {
+    while (iterator.hasNext() && totalTaskSlotsAssigned < numAvailableCompactionTaskSlots) {
+      final SegmentsToCompact entry = iterator.next();
+      if (entry.isEmpty()) {
         throw new ISE("segmentsToCompact is empty?");
       }
 
-      final String dataSourceName = segmentsToCompact.get(0).getDataSource();
+      final String dataSourceName = entry.getFirst().getDataSource();
 
-      // As these segments will be compacted, we will aggregates the statistic to the Compacted statistics
-      AutoCompactionSnapshot.Builder snapshotBuilder = currentRunAutoCompactionSnapshotBuilders.computeIfAbsent(
-          dataSourceName,
-          k -> new AutoCompactionSnapshot.Builder(k, AutoCompactionSnapshot.AutoCompactionScheduleStatus.RUNNING)
-      );
-      snapshotBuilder.incrementBytesCompacted(
-          segmentsToCompact.stream().mapToLong(DataSegment::getSize).sum()
-      );
-      snapshotBuilder.incrementIntervalCountCompacted(
-          segmentsToCompact.stream()
-                           .map(DataSegment::getInterval)
-                           .distinct().count()
-      );
-      snapshotBuilder.incrementSegmentCountCompacted(segmentsToCompact.size());
+      // As these segments will be compacted, we will aggregate the statistic to the Compacted statistics
+      currentRunAutoCompactionSnapshotBuilders
+          .computeIfAbsent(dataSourceName, AutoCompactionSnapshot::builder)
+          .incrementCompactedStats(entry.getStats());
 
       final DataSourceCompactionConfig config = compactionConfigs.get(dataSourceName);
+      final List<DataSegment> segmentsToCompact = entry.getSegments();
 
       // Create granularitySpec to send to compaction task
       ClientCompactionTaskGranularitySpec granularitySpec;
       Granularity segmentGranularityToUse = null;
       if (config.getGranularitySpec() == null || config.getGranularitySpec().getSegmentGranularity() == null) {
         // Determines segmentGranularity from the segmentsToCompact
-        // Each batch of segmentToCompact from CompactionSegmentIterator will contains the same interval as
+        // Each batch of segmentToCompact from CompactionSegmentIterator will contain the same interval as
         // segmentGranularity is not set in the compaction config
         Interval interval = segmentsToCompact.get(0).getInterval();
         if (segmentsToCompact.stream().allMatch(segment -> interval.overlaps(segment.getInterval()))) {
@@ -475,11 +421,13 @@ public class CompactSegments implements CoordinatorCustomDuty
           catch (IllegalArgumentException iae) {
             // This case can happen if the existing segment interval result in complicated periods.
             // Fall back to setting segmentGranularity as null
-            LOG.warn("Cannot determine segmentGranularity from interval [%s]", interval);
+            LOG.warn("Cannot determine segmentGranularity from interval[%s].", interval);
           }
         } else {
           LOG.warn(
-              "segmentsToCompact does not have the same interval. Fallback to not setting segmentGranularity for auto compaction task");
+              "Not setting 'segmentGranularity' for auto-compaction task as"
+              + " the segments to compact do not have the same interval."
+          );
         }
       } else {
         segmentGranularityToUse = config.getGranularitySpec().getSegmentGranularity();
@@ -533,8 +481,30 @@ public class CompactSegments implements CoordinatorCustomDuty
         }
       }
 
+      final CompactionEngine compactionEngine = config.getEngine() == null ? defaultEngine : config.getEngine();
+      final Map<String, Object> autoCompactionContext = newAutoCompactionContext(config.getTaskContext());
+      int slotsRequiredForCurrentTask;
+
+      if (compactionEngine == CompactionEngine.MSQ) {
+        if (autoCompactionContext.containsKey(ClientMSQContext.CTX_MAX_NUM_TASKS)) {
+          slotsRequiredForCurrentTask = (int) autoCompactionContext.get(ClientMSQContext.CTX_MAX_NUM_TASKS);
+        } else {
+          // Since MSQ needs all task slots for the calculated #tasks to be available upfront, allot all available
+          // compaction slots (upto a max of MAX_TASK_SLOTS_FOR_MSQ_COMPACTION) to current compaction task to avoid
+          // stalling. Setting "taskAssignment" to "auto" has the problem of not being able to determine the actual
+          // count, which is required for subsequent tasks.
+          slotsRequiredForCurrentTask = Math.min(
+              // Update the slots to 2 (min required for MSQ) if only 1 slot is available.
+              numAvailableCompactionTaskSlots == 1 ? 2 : numAvailableCompactionTaskSlots,
+              ClientMSQContext.MAX_TASK_SLOTS_FOR_MSQ_COMPACTION_TASK
+          );
+          autoCompactionContext.put(ClientMSQContext.CTX_MAX_NUM_TASKS, slotsRequiredForCurrentTask);
+        }
+      } else {
+        slotsRequiredForCurrentTask = findMaxNumTaskSlotsUsedByOneNativeCompactionTask(config.getTuningConfig());
+      }
+
       final String taskId = compactSegments(
-          "coordinator-issued",
           segmentsToCompact,
           config.getTaskPriority(),
           ClientCompactionTaskQueryTuningConfig.from(
@@ -547,16 +517,20 @@ public class CompactSegments implements CoordinatorCustomDuty
           config.getMetricsSpec(),
           transformSpec,
           dropExisting,
-          newAutoCompactionContext(config.getTaskContext())
+          autoCompactionContext,
+          new ClientCompactionRunnerInfo(compactionEngine)
       );
 
-      LOG.info("Submitted a compactionTask[%s] for [%d] segments", taskId, segmentsToCompact.size());
-      LOG.infoSegments(segmentsToCompact, "Compacting segments");
-      // Count the compaction task itself + its sub tasks
+      LOG.info(
+          "Submitted a compaction task[%s] for [%d] segments in datasource[%s], umbrella interval[%s].",
+          taskId, segmentsToCompact.size(), dataSourceName, entry.getUmbrellaInterval()
+      );
+      LOG.debugSegments(segmentsToCompact, "Compacting segments");
       numSubmittedTasks++;
-      numCompactionTasksAndSubtasks += findMaxNumTaskSlotsUsedByOneCompactionTask(config.getTuningConfig());
+      totalTaskSlotsAssigned += slotsRequiredForCurrentTask;
     }
 
+    LOG.info("Submitted a total of [%d] compaction tasks.", numSubmittedTasks);
     return numSubmittedTasks;
   }
 
@@ -569,7 +543,7 @@ public class CompactSegments implements CoordinatorCustomDuty
     return newContext;
   }
 
-  private void addCompactionSnapshotStats(
+  private void updateCompactionSnapshotStats(
       Map<String, AutoCompactionSnapshot.Builder> currentRunAutoCompactionSnapshotBuilders,
       CompactionSegmentIterator iterator,
       CoordinatorRunStats stats
@@ -577,81 +551,46 @@ public class CompactSegments implements CoordinatorCustomDuty
   {
     // Mark all the segments remaining in the iterator as "awaiting compaction"
     while (iterator.hasNext()) {
-      final List<DataSegment> segmentsToCompact = iterator.next();
-      if (!segmentsToCompact.isEmpty()) {
-        final String dataSourceName = segmentsToCompact.get(0).getDataSource();
-        AutoCompactionSnapshot.Builder snapshotBuilder = currentRunAutoCompactionSnapshotBuilders.computeIfAbsent(
-            dataSourceName,
-            k -> new AutoCompactionSnapshot.Builder(k, AutoCompactionSnapshot.AutoCompactionScheduleStatus.RUNNING)
-        );
-        snapshotBuilder.incrementBytesAwaitingCompaction(
-            segmentsToCompact.stream()
-                             .mapToLong(DataSegment::getSize)
-                             .sum()
-        );
-        snapshotBuilder.incrementIntervalCountAwaitingCompaction(
-            segmentsToCompact.stream()
-                             .map(DataSegment::getInterval)
-                             .distinct()
-                             .count()
-        );
-        snapshotBuilder.incrementSegmentCountAwaitingCompaction(segmentsToCompact.size());
+      final SegmentsToCompact entry = iterator.next();
+      if (!entry.isEmpty()) {
+        final String dataSourceName = entry.getFirst().getDataSource();
+        currentRunAutoCompactionSnapshotBuilders
+            .computeIfAbsent(dataSourceName, AutoCompactionSnapshot::builder)
+            .incrementWaitingStats(entry.getStats());
       }
     }
 
     // Statistics of all segments considered compacted after this run
-    Map<String, CompactionStatistics> allCompactedStatistics = iterator.totalCompactedStatistics();
-    for (Map.Entry<String, CompactionStatistics> compactionStatisticsEntry : allCompactedStatistics.entrySet()) {
-      final String dataSource = compactionStatisticsEntry.getKey();
-      final CompactionStatistics dataSourceCompactedStatistics = compactionStatisticsEntry.getValue();
-      AutoCompactionSnapshot.Builder builder = currentRunAutoCompactionSnapshotBuilders.computeIfAbsent(
-          dataSource,
-          k -> new AutoCompactionSnapshot.Builder(k, AutoCompactionSnapshot.AutoCompactionScheduleStatus.RUNNING)
-      );
-      builder.incrementBytesCompacted(dataSourceCompactedStatistics.getByteSum());
-      builder.incrementSegmentCountCompacted(dataSourceCompactedStatistics.getSegmentNumberCountSum());
-      builder.incrementIntervalCountCompacted(dataSourceCompactedStatistics.getSegmentIntervalCountSum());
-    }
+    iterator.totalCompactedStatistics().forEach((dataSource, compactedStats) -> {
+      currentRunAutoCompactionSnapshotBuilders
+          .computeIfAbsent(dataSource, AutoCompactionSnapshot::builder)
+          .incrementCompactedStats(compactedStats);
+    });
 
     // Statistics of all segments considered skipped after this run
-    Map<String, CompactionStatistics> allSkippedStatistics = iterator.totalSkippedStatistics();
-    for (Map.Entry<String, CompactionStatistics> compactionStatisticsEntry : allSkippedStatistics.entrySet()) {
-      final String dataSource = compactionStatisticsEntry.getKey();
-      final CompactionStatistics dataSourceSkippedStatistics = compactionStatisticsEntry.getValue();
-      AutoCompactionSnapshot.Builder builder = currentRunAutoCompactionSnapshotBuilders.computeIfAbsent(
-          dataSource,
-          k -> new AutoCompactionSnapshot.Builder(k, AutoCompactionSnapshot.AutoCompactionScheduleStatus.RUNNING)
-      );
-      builder.incrementBytesSkipped(dataSourceSkippedStatistics.getByteSum());
-      builder.incrementSegmentCountSkipped(dataSourceSkippedStatistics.getSegmentNumberCountSum());
-      builder.incrementIntervalCountSkipped(dataSourceSkippedStatistics.getSegmentIntervalCountSum());
-    }
+    iterator.totalSkippedStatistics().forEach((dataSource, dataSourceSkippedStatistics) -> {
+      currentRunAutoCompactionSnapshotBuilders
+          .computeIfAbsent(dataSource, AutoCompactionSnapshot::builder)
+          .incrementSkippedStats(dataSourceSkippedStatistics);
+    });
 
     final Map<String, AutoCompactionSnapshot> currentAutoCompactionSnapshotPerDataSource = new HashMap<>();
-    for (Map.Entry<String, AutoCompactionSnapshot.Builder> autoCompactionSnapshotBuilderEntry
-        : currentRunAutoCompactionSnapshotBuilders.entrySet()) {
-      final String dataSource = autoCompactionSnapshotBuilderEntry.getKey();
-      final AutoCompactionSnapshot.Builder builder = autoCompactionSnapshotBuilderEntry.getValue();
-
-      // Build the complete snapshot for the datasource
-      AutoCompactionSnapshot autoCompactionSnapshot = builder.build();
+    currentRunAutoCompactionSnapshotBuilders.forEach((dataSource, builder) -> {
+      final AutoCompactionSnapshot autoCompactionSnapshot = builder.build();
       currentAutoCompactionSnapshotPerDataSource.put(dataSource, autoCompactionSnapshot);
-
-      // Use the complete snapshot to emit metrics
-      addStatsForDatasource(dataSource, autoCompactionSnapshot, stats);
-    }
+      collectSnapshotStats(autoCompactionSnapshot, stats);
+    });
 
     // Atomic update of autoCompactionSnapshotPerDataSource with the latest from this coordinator run
     autoCompactionSnapshotPerDataSource.set(currentAutoCompactionSnapshotPerDataSource);
   }
 
-  private void addStatsForDatasource(
-      String dataSource,
+  private void collectSnapshotStats(
       AutoCompactionSnapshot autoCompactionSnapshot,
       CoordinatorRunStats stats
   )
   {
-    final RowKey rowKey = RowKey.of(Dimension.DATASOURCE, dataSource);
+    final RowKey rowKey = RowKey.of(Dimension.DATASOURCE, autoCompactionSnapshot.getDataSource());
 
     stats.add(Stats.Compaction.PENDING_BYTES, rowKey, autoCompactionSnapshot.getBytesAwaitingCompaction());
     stats.add(Stats.Compaction.PENDING_SEGMENTS, rowKey, autoCompactionSnapshot.getSegmentCountAwaitingCompaction());
@@ -686,7 +625,6 @@ public class CompactSegments implements CoordinatorCustomDuty
   }
 
   private String compactSegments(
-      String idPrefix,
       List<DataSegment> segments,
       int compactionTaskPriority,
       @Nullable ClientCompactionTaskQueryTuningConfig tuningConfig,
@@ -695,7 +633,8 @@ public class CompactSegments implements CoordinatorCustomDuty
       @Nullable AggregatorFactory[] metricsSpec,
       @Nullable ClientCompactionTaskTransformSpec transformSpec,
       @Nullable Boolean dropExisting,
-      @Nullable Map<String, Object> context
+      @Nullable Map<String, Object> context,
+      ClientCompactionRunnerInfo compactionRunner
   )
   {
     Preconditions.checkArgument(!segments.isEmpty(), "Expect non-empty segments to compact");
@@ -709,7 +648,7 @@ public class CompactSegments implements CoordinatorCustomDuty
     context = context == null ? new HashMap<>() : context;
     context.put("priority", compactionTaskPriority);
 
-    final String taskId = IdUtils.newTaskId(idPrefix, ClientCompactionTaskQuery.TYPE, dataSource, null);
+    final String taskId = IdUtils.newTaskId(TASK_ID_PREFIX, ClientCompactionTaskQuery.TYPE, dataSource, null);
     final Granularity segmentGranularity = granularitySpec == null ? null : granularitySpec.getSegmentGranularity();
     final ClientTaskQuery taskPayload = new ClientCompactionTaskQuery(
         taskId,
@@ -723,7 +662,8 @@ public class CompactSegments implements CoordinatorCustomDuty
         dimensionsSpec,
         metricsSpec,
         transformSpec,
-        context
+        context,
+        compactionRunner
     );
     FutureUtils.getUnchecked(overlordClient.runTask(taskId, taskPayload), true);
     return taskId;
